fix kotlin module